[package]
name = "ppr"
version = "0.1.0"
authors = ["Matthias Bussonnier <bussonniermatthias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
glob = "0.3.0"
serde_tuple = "0.5.0"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.0"
askama = "0.10.5"

[lib]
crate-type = ["cdylib","rlib"]
name = "ppr"

[profile.dev]
incremental = true

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]
